ws_server/manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-server
  namespace: socketserver
spec:
  selector:
    app: ws-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
